loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:8: error: reassignment to val
    cote=cote+1
        ^LoopCourse:11: error: reassignment to val
  tour=tour+1
      ^